исправил ошибки в разметке ссылок на производителей

--- a/index.html
+++ b/index.html
@@ -128,28 +128,44 @@
             <div class="manufacturers-list">
               <ul>
                 <li>
-                  <a class="manufacturers-list-item" href="#"><img src="img/img-1.jpg" width="220" height="165" alt="Bosch"></a>
+                  <a class="manufacturers-list-item" href="#">
+                    <img src="img/img-1.jpg" width="220" height="165" alt="Bosch">
+                  </a>
                 </li>
                 <li>
-                  <a class="manufacturers-list-item" href="#"><img src="img/img-2.jpg" width="220" height="165" alt="makita"></a>
+                  <a class="manufacturers-list-item" href="#">
+                    <img src="img/img-2.jpg" width="220" height="165" alt="makita">
+                  </a>
                 </li>
                 <li>
-                  <a class="manufacturers-list-item" href="#"></a><img src="img/img-3.jpg" width="220" height="165" alt="deWALT"></a>
+                  <a class="manufacturers-list-item" href="#">
+                    <img src="img/img-3.jpg" width="220" height="165" alt="deWALT">
+                  </a>
                 </li>
                 <li>
-                  <a class="manufacturers-list-item" href="#"></a><img src="img/img-4.jpg" width="220" height="165" alt="Интерскол"></a>
+                  <a class="manufacturers-list-item" href="#">
+                    <img src="img/img-4.jpg" width="220" height="165" alt="Интерскол">
+                  </a>
                 </li>
                 <li>
-                  <a class="manufacturers-list-item" href="#"><img src="img/img-5.jpg" width="220" height="165" alt="Hitachi"></a>
+                  <a class="manufacturers-list-item" href="#">
+                    <img src="img/img-5.jpg" width="220" height="165" alt="Hitachi">
+                  </a>
                 </li>
                 <li>
-                  <a class="manufacturers-list-item" href="#"><img src="img/img-6.jpg" width="220" height="165" alt="LG"></a>
+                  <a class="manufacturers-list-item" href="#">
+                    <img src="img/img-6.jpg" width="220" height="165" alt="LG">
+                  </a>
                 </li>
                 <li>
-                  <a class="manufacturers-list-item" href="#"><img src="img/img-7.jpg" width="220" height="165" alt="AEG power solutions"></a>
+                  <a class="manufacturers-list-item" href="#">
+                    <img src="img/img-7.jpg" width="220" height="165" alt="AEG power solutions">
+                  </a>
                 </li>
                 <li>
-                  <a class="manufacturers-list-item" href="#"><img src="img/img-8.jpg" width="220" height="165" alt="metabo"></a>
+                  <a class="manufacturers-list-item" href="#">
+                    <img src="img/img-8.jpg" width="220" height="165" alt="metabo">
+                  </a>
                 </li>
               </ul>
             </div>
