сделал promo-top списком

--- a/index.html
+++ b/index.html
@@ -54,86 +54,90 @@
     <main>
 
       <section class="container promo">
-
+        
         <div class="promo-top">
-          <div class="promo-item new">
-            <h3>Материалы</h3>
-            <a href="#">На любой вкус</a>
-            <img src="#" alt="ведро">
-          </div>
-          <div class="promo-item">
-            <h3>Инструмент</h3>
-            <a href="#">На все случаи</a>
-            <img src="#" alt="дрель">
-          </div>
-          <div class="promo-item">
-            <h3>Техника</h3>
-            <a href="#">Для стройки</a>
-            <img src="#" alt="трактор">
-          </div>
+          <ul class="promo-list">
+            <li class="promo-item new">
+              <h3>Материалы</h3>
+              <a href="#">На любой вкус</a>
+              <img src="#" alt="ведро">
+            </li>
+            <li class="promo-item">
+              <h3>Инструмент</h3>
+              <a href="#">На все случаи</a>
+              <img src="#" alt="дрель">
+            </li>
+            <li class="promo-item">
+              <h3>Техника</h3>
+              <a href="#">Для стройки</a>
+              <img src="#" alt="трактор">
+            </li>
+          </ul>
         </div>
 
-        <div class="promo-left">
-          <div class="slider">
-            <div class="slider-header">
-              <h3>Дрели</h3>
-              <p>Соседям на радость!</p>
-            </div>
+        <div class="promo-bottom-container">
+          <div class="promo-left">
+            <div class="slider">
+              <div class="slider-header">
+                <h3>Дрели</h3>
+                <p>Соседям на радость!</p>
+              </div>
 
-            <div class="carousel slide">
-              <div class="carousel-inner">
-                <div class="item active">
+              <div class="carousel slide">
+                <div class="carousel-inner">
+                  <div class="item active">
+                    <div class="banner-image">
+                      <a href="#">
+                        <img src="#" alt="изображение активного слайдера">
+                      </a>
+                    </div>
+                    <div class="caption">
+                      <a class="btn" href="catalog.html">Открыть каталог</a>
+                    </div>
+                  </div>
+                </div><!-- /Slide1 -->
+
+                <div class="item">
                   <div class="banner-image">
                     <a href="#">
-                      <img src="#" alt="изображение активного слайдера">
+                      <img src="#" alt="next img">
                     </a>
                   </div>
                   <div class="caption">
                     <a class="btn" href="catalog.html">Открыть каталог</a>
                   </div>
-                </div>
-              </div><!-- /Slide1 -->
+                </div><!-- /Slide2 -->
 
-              <div class="item">
-                <div class="banner-image">
-                  <a href="#">
-                    <img src="#" alt="next img">
-                  </a>
-                </div>
-                <div class="caption">
-                  <a class="btn" href="catalog.html">Открыть каталог</a>
-                </div>
-              </div><!-- /Slide2 -->
+                <div class="item">
+                  <div class="banner-image">
+                    <a href="#">
+                      <img src="#" alt="next img">
+                    </a>
+                  </div>
+                  <div class="caption">
+                    <a class="btn" href="catalog.html">Открыть каталог</a>
+                  </div>
+                </div><!-- /Slide3 -->
+              </div>
 
-              <div class="item">
-                <div class="banner-image">
-                  <a href="#">
-                    <img src="#" alt="next img">
-                  </a>
-                </div>
-                <div class="caption">
-                  <a class="btn" href="catalog.html">Открыть каталог</a>
-                </div>
-              </div><!-- /Slide3 -->
-            </div>
-
-            <div class="control-box"> <!-- под вопросом -->
-              <a data-slide="prev" href="#myCarousel" class="carousel-control left">‹</a>
-              <a data-slide="next" href="#myCarousel" class="carousel-control right">›</a>
-            </div><!-- /.control-box -->
-          </div><!-- /#slider -->
-        </div>
-
-        <div class="promo-right">
-          <div class="promo-item">
-            <h3>Скидки 50%</h3>
-            <a href="#">На 350 товаров</a>
-            <img src="#" alt="корзина">
+              <div class="control-box"> <!-- под вопросом -->
+                <a data-slide="prev" href="#myCarousel" class="carousel-control left">‹</a>
+                <a data-slide="next" href="#myCarousel" class="carousel-control right">›</a>
+              </div><!-- /.control-box -->
+            </div><!-- /#slider -->
           </div>
-          <div class="promo-item">
-            <h3>Доставка</h3>
-            <a href="#">Бесплатно</a>
-            <img src="#" alt="машина">
+
+          <div class="promo-right">
+            <div class="promo-item">
+              <h3>Скидки 50%</h3>
+              <a href="#">На 350 товаров</a>
+              <img src="#" alt="корзина">
+            </div>
+            <div class="promo-item">
+              <h3>Доставка</h3>
+              <a href="#">Бесплатно</a>
+              <img src="#" alt="машина">
+            </div>
           </div>
         </div>
 
