--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
     <main>
 
       <section class="container promo">
-        
         <div class="promo-top">
           <ul class="promo-list">
             <li class="promo-item new">
@@ -74,7 +73,6 @@
             </li>
           </ul>
         </div>
-
         <div class="promo-bottom-container">
           <div class="promo-left">
             <div class="slider">
@@ -126,7 +124,6 @@
               </div><!-- /.control-box -->
             </div><!-- /#slider -->
           </div>
-
           <div class="promo-right">
             <div class="promo-item">
               <h3>Скидки 50%</h3>
@@ -140,7 +137,6 @@
             </div>
           </div>
         </div>
-
       </section>
 
       <section class="goods-and-manufacturers">
@@ -204,50 +200,48 @@
               <h2>Популярные производители:</h2>
               <a href="#">Все производители</a>
             </div>
-            <div class="manufacturers-list">
-              <ul>
-                <li>
-                  <a class="manufacturers-list-item" href="#">
-                    <img src="img/img-1.jpg" width="220" height="165" alt="Bosch">
-                  </a>
-                </li>
-                <li>
-                  <a class="manufacturers-list-item" href="#">
-                    <img src="img/img-2.jpg" width="220" height="165" alt="makita">
-                  </a>
-                </li>
-                <li>
-                  <a class="manufacturers-list-item" href="#">
-                    <img src="img/img-3.jpg" width="220" height="165" alt="deWALT">
-                  </a>
-                </li>
-                <li>
-                  <a class="manufacturers-list-item" href="#">
-                    <img src="img/img-4.jpg" width="220" height="165" alt="Интерскол">
-                  </a>
-                </li>
-                <li>
-                  <a class="manufacturers-list-item" href="#">
-                    <img src="img/img-5.jpg" width="220" height="165" alt="Hitachi">
-                  </a>
-                </li>
-                <li>
-                  <a class="manufacturers-list-item" href="#">
-                    <img src="img/img-6.jpg" width="220" height="165" alt="LG">
-                  </a>
-                </li>
-                <li>
-                  <a class="manufacturers-list-item" href="#">
-                    <img src="img/img-7.jpg" width="220" height="165" alt="AEG power solutions">
-                  </a>
-                </li>
-                <li>
-                  <a class="manufacturers-list-item" href="#">
-                    <img src="img/img-8.jpg" width="220" height="165" alt="metabo">
-                  </a>
-                </li>
-              </ul>
-            </div>
+            <ul class="manufacturers-list">
+              <li>
+                <a class="manufacturers-list-item" href="#">
+                  <img src="img/img-1.jpg" width="220" height="165" alt="Bosch">
+                </a>
+              </li>
+              <li>
+                <a class="manufacturers-list-item" href="#">
+                  <img src="img/img-2.jpg" width="220" height="165" alt="makita">
+                </a>
+              </li>
+              <li>
+                <a class="manufacturers-list-item" href="#">
+                  <img src="img/img-3.jpg" width="220" height="165" alt="deWALT">
+                </a>
+              </li>
+              <li>
+                <a class="manufacturers-list-item" href="#">
+                  <img src="img/img-4.jpg" width="220" height="165" alt="Интерскол">
+                </a>
+              </li>
+              <li>
+                <a class="manufacturers-list-item" href="#">
+                  <img src="img/img-5.jpg" width="220" height="165" alt="Hitachi">
+                </a>
+              </li>
+              <li>
+                <a class="manufacturers-list-item" href="#">
+                  <img src="img/img-6.jpg" width="220" height="165" alt="LG">
+                </a>
+              </li>
+              <li>
+                <a class="manufacturers-list-item" href="#">
+                  <img src="img/img-7.jpg" width="220" height="165" alt="AEG power solutions">
+                </a>
+              </li>
+              <li>
+                <a class="manufacturers-list-item" href="#">
+                  <img src="img/img-8.jpg" width="220" height="165" alt="metabo">
+                </a>
+              </li>
+            </ul>
           </div>
         </div>
       </section>
@@ -363,5 +357,5 @@
       </div>
     </footer>
   </body>
-  
+
 </html>
