добавил ссылки в меню сортировки

--- a/catalog.html
+++ b/catalog.html
@@ -130,11 +130,11 @@
 
         <div class="sort">
           <span>Сортировка:</span>
-          <span>по цене</span>
-          <span>по типу</span>
-          <span>по функционалу</span>
-          <span>вверх</span>
-          <span>вниз</span>
+          <a href="#">по цене</a>
+          <a href="#">по типу</a>
+          <a href="#">по функционалу</a>
+          <span><a href="#"></a>вверх</span>
+          <span><a href="#"></a>вниз</span>
         </div>
 
         <ul class="catalog-list">
