--- a/catalog.html
+++ b/catalog.html
@@ -125,22 +125,23 @@
         </div>
       </section>
 
+      <!-- Сортировка -->
+      <div class="sort">
+        <span>Сортировка:</span>
+        <a href="#">по цене</a>
+        <a href="#">по типу</a>
+        <a href="#">по функционалу</a>
+        <span><a href="#"></a>вверх</span>
+        <span><a href="#"></a>вниз</span>
+      </div>
+
       <!-- карточки товаров -->
       <section class="catalog-goods">
-
-        <div class="sort">
-          <span>Сортировка:</span>
-          <a href="#">по цене</a>
-          <a href="#">по типу</a>
-          <a href="#">по функционалу</a>
-          <span><a href="#"></a>вверх</span>
-          <span><a href="#"></a>вниз</span>
-        </div>
 
         <ul class="catalog-list">
           <li class="catalog-item">
             <figure class="catalog-item-image">           
-              <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
+              <img src="img/snippet-3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
             </figure>              
             <h3>
               <span class="catalog-category">Перфоратор BOSCH</span>
@@ -151,7 +152,7 @@
           </li>
           <li class="catalog-item">
             <figure class="catalog-item-image">           
-              <img src="img/product-2.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
+              <img src="img/snippet-2.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
             </figure>              
             <h3>
               <span class="catalog-category">Перфоратор BOSCH</span>
@@ -167,11 +168,11 @@
               <span class="catalog-category">Перфоратор BOSCH</span>
               <span class="catalog-item-title">BFG 2000</span>                
             </h3>              
-            <p class="new-price">15500 ₽.</p>
+            <p class="new-price">12500 ₽.</p>
           </li>
           <li class="catalog-item">
             <figure class="catalog-item-image">           
-              <img src="img/product-4.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
+              <img src="img/snippet-3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
             </figure>              
             <h3>
               <span class="catalog-category">Перфоратор BOSCH</span>
@@ -182,7 +183,7 @@
           </li>
           <li class="catalog-item new">
             <figure class="catalog-item-image">
-              <img src="img/product-5.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
+              <img src="img/snippet-2.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
             </figure>              
             <h3>
               <span class="catalog-category">Перфоратор BOSCH</span>
@@ -193,7 +194,7 @@
           </li>
           <li class="catalog-item">  
             <figure class="catalog-item-image">
-              <img src="img/product-6.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
+              <img src="img/snippet-3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
             </figure>              
             <h3>
               <span class="catalog-category">Перфоратор BOSCH</span>
@@ -204,7 +205,7 @@
           </li>
           <li class="catalog-item new">
             <figure class="catalog-item-image">
-              <img src="img/product-7.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
+              <img src="img/snippet-3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
             </figure>              
             <h3>
               <span class="catalog-category">Перфоратор BOSCH</span>
@@ -215,7 +216,7 @@
           </li>
           <li class="catalog-item">
             <figure class="catalog-item-image">
-              <img src="img/product-8.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
+              <img src="img/snippet-2.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
             </figure>              
             <h3>
               <span class="catalog-category">Перфоратор BOSCH</span>
@@ -226,7 +227,7 @@
           </li>
           <li class="catalog-item">
             <figure class="catalog-item-image">
-              <img src="img/product-9.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
+              <img src="img/snippet-3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
             </figure>              
             <h3>
               <span class="catalog-category">Перфоратор BOSCH</span>
