--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                   <div class="item active">
                     <div class="banner-image">
                       <a href="#">
-                        <img src="#" alt="изображение активного слайдера">
+                        <img src="img/ravshan.jpg" alt="Равшан Джамшутович">
                       </a>
                     </div>
                     <div class="caption">
@@ -98,7 +98,7 @@
                 <div class="item">
                   <div class="banner-image">
                     <a href="#">
-                      <img src="#" alt="next img">
+                      <img src="img/jamshut.jpg" alt="Джамшут Равшанович">
                     </a>
                   </div>
                   <div class="caption">
@@ -150,7 +150,7 @@
               <ul>
                 <li class="catalog-item">
                   <figure class="catalog-item-image">
-                    <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 9000">
+                    <img src="img/snippet-1.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
                   </figure>              
                   <h3>
                     <span class="catalog-category">Перфоратор BOSCH</span>
@@ -161,7 +161,7 @@
                 </li>
                 <li class="catalog-item">
                   <figure class="catalog-item-image">
-                    <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
+                    <img src="img/snippet-3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
                   </figure>              
                   <h3>
                     <span class="catalog-category">Перфоратор BOSCH</span>
@@ -172,7 +172,7 @@
                 </li>
                 <li class="catalog-item">
                   <figure class="catalog-item-image">           
-                    <img src="img/product-2.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
+                    <img src="img/snippet-2.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                   </figure>              
                   <h3>
                     <span class="catalog-category">Перфоратор BOSCH</span>
@@ -183,7 +183,7 @@
                 </li>
                 <li class="catalog-item new">
                   <figure class="catalog-item-image">
-                    <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
+                    <img src="img/snippet-3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
                   </figure>
                   <h3>
                     <span class="catalog-category">Перфоратор BOSCH</span>
@@ -202,42 +202,42 @@
             <ul class="manufacturers-list">
               <li>
                 <a class="manufacturers-list-item" href="#">
-                  <img src="img/img-1.jpg" width="220" height="165" alt="Bosch">
+                  <img src="img/bosch.jpg" width="126" height="37" alt="Bosch">
                 </a>
               </li>
               <li>
                 <a class="manufacturers-list-item" href="#">
-                  <img src="img/img-2.jpg" width="220" height="165" alt="makita">
+                  <img src="img/makita.jpg" width="123" height="40" alt="makita">
                 </a>
               </li>
               <li>
                 <a class="manufacturers-list-item" href="#">
-                  <img src="img/img-3.jpg" width="220" height="165" alt="deWALT">
+                  <img src="img/de-walt.jpg" width="146" height="44" alt="deWALT">
                 </a>
               </li>
               <li>
                 <a class="manufacturers-list-item" href="#">
-                  <img src="img/img-4.jpg" width="220" height="165" alt="Интерскол">
+                  <img src="img/interskol.jpg" width="200" height="88" alt="Интерскол">
                 </a>
               </li>
               <li>
                 <a class="manufacturers-list-item" href="#">
-                  <img src="img/img-5.jpg" width="220" height="165" alt="Hitachi">
+                  <img src="img/hitachi.jpg" width="169" height="31" alt="Hitachi">
                 </a>
               </li>
               <li>
                 <a class="manufacturers-list-item" href="#">
-                  <img src="img/img-6.jpg" width="220" height="165" alt="LG">
+                  <img src="img/lg.jpg" width="121" height="73" alt="LG">
                 </a>
               </li>
               <li>
                 <a class="manufacturers-list-item" href="#">
-                  <img src="img/img-7.jpg" width="220" height="165" alt="AEG power solutions">
+                  <img src="img/aeg.jpg" width="151" height="96" alt="AEG power solutions">
                 </a>
               </li>
               <li>
                 <a class="manufacturers-list-item" href="#">
-                  <img src="img/img-8.jpg" width="220" height="165" alt="metabo">
+                  <img src="img/metabo.jpg" width="204" height="69" alt="metabo">
                 </a>
               </li>
             </ul>
