убрал текст из линков на социалки и добавил aria-lavel

--- a/index.html
+++ b/index.html
@@ -335,9 +335,9 @@
             Все права защищены
           <p>
           <ul class="footer-social">
-            <li><a class="social-button" href="#">Вконтакте</a></li>
-            <li><a class="social-button" href="#">Фейсбук</a></li>
-            <li><a class="social-button" href="#">Инстаграм</a></li>
+            <li><a class="social-button" href="#" aria-label="Вконтакте">Вконтакте</a></li>
+            <li><a class="social-button" href="#" aria-label="Фейсбук">Фейсбук</a></li>
+            <li><a class="social-button" href="#" aria-label="Инстаграм">Инстаграм</a></li>
           </ul>  
           <p>
             Обратная связь:
