--- a/catalog.html
+++ b/catalog.html
@@ -84,28 +84,27 @@
                 <input type="range" name="price" id="price" min="0" max="50000" step="1">
                 <label for="price"></label>
               </p>
-              <!-- Тут по ранжированию не совсем понятно, 0 - 30к это весь диапазон цен ИЛИ на значении 30к сейчас стоит ползунок? -->
             </fieldset>
             <fieldset class="manufacturers">
               <legend>Производители:</legend>
               <p>
-                <input type="checkbox" id="bosch" name="bosch" checked>
+                <input type="checkbox" id="bosch" name="manufacturers" checked>
                 <label for="bosch">bosch</label>
               </p>
               <p>
-                <input type="checkbox" id="interskol" name="interskol">
+                <input type="checkbox" id="interskol" name="manufacturers">
                 <label for="interskol">интерскол</label>
               </p>
               <p>
-                <input type="checkbox" id="makita" name="makita" checked>
+                <input type="checkbox" id="makita" name="manufacturers" checked>
                 <label for="makita">makita</label>
               </p>
               <p>
-                <input type="checkbox" id="dewalt" name="dewalt">
+                <input type="checkbox" id="dewalt" name="manufacturers">
                 <label for="dewalt">dewalt</label>
               </p>
               <p>
-                <input type="checkbox" id="hitachi" name="hitachi">
+                <input type="checkbox" id="hitachi" name="manufacturers">
                 <label for="hitachi">hitachi</label>
               </p>
             </fieldset>
