добавил ссылку на курс, в футере + убрал лишний блок из слайдера

--- a/catalog.html
+++ b/catalog.html
@@ -302,7 +302,7 @@
           </p>
           <p>
             Разработано &#8211;
-            <a href="https://htmlacademy.ru">htmlacademy.ru</a>
+            <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
           </p>
         </div>
       </div>
