--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <a class="header-logo">Техномарт</a>
           <form class="search">
             <input type="text" placeholder="Искать здесь:">
-            <button type="submit">Найти</button> <!-- кнопку потом скрыть -->
+            <button class="visually-hidden" type="submit">Найти</button> <!-- кнопку потом скрыть -->
           </form>
           <a href="#">Закладки: 0</a>
           <a href="#">Корзина: 0</a>
@@ -102,17 +102,6 @@
                     <a class="btn" href="catalog.html">Открыть каталог</a>
                   </div>
                 </div><!-- /Slide2 -->
-
-                <div class="item">
-                  <div class="banner-image">
-                    <a href="#">
-                      <img src="#" alt="next img">
-                    </a>
-                  </div>
-                  <div class="caption">
-                    <a class="btn" href="catalog.html">Открыть каталог</a>
-                  </div>
-                </div><!-- /Slide3 -->
               </div>
 
               <div class="control-box"> <!-- под вопросом -->
@@ -335,9 +324,9 @@
             Все права защищены
           <p>
           <ul class="footer-social">
-            <li><a class="social-button" href="#" aria-label="Вконтакте">Вконтакте</a></li>
-            <li><a class="social-button" href="#" aria-label="Фейсбук">Фейсбук</a></li>
-            <li><a class="social-button" href="#" aria-label="Инстаграм">Инстаграм</a></li>
+            <li><a class="social-button" href="#" aria-label="Вконтакте"></a></li>
+            <li><a class="social-button" href="#" aria-label="Фейсбук"></a></li>
+            <li><a class="social-button" href="#" aria-label="Инстаграм"></a></li>
           </ul>  
           <p>
             Обратная связь:
@@ -345,7 +334,7 @@
           </p>
           <p>
             Разработано &#8211;
-            <a href="https://htmlacademy.ru">htmlacademy.ru</a>
+            <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
           </p>
         </div>
       </div>
