--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container">
           <a class="header-logo">Техномарт</a>
           <form class="search">
-            <input type="text" placeholder="Искать здесь:">
+            <input type="text" placeholder="Поиск:">
             <button class="visually-hidden" type="submit">Найти</button> <!-- кнопку потом скрыть -->
           </form>
           <a href="#">Закладки: 0</a>
@@ -21,24 +21,22 @@
           <a href="#">Оформить заказ</a>
         </div>
       </div>
-      <!-- средний блок шапки -->
-      <div class="header-middle">
+      <div class="header-middle"> <!-- средний блок шапки -->
         <div class="container">
           <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
           <div class="header-contacts">            
-            <a href="tel:+78125550555">+7(812)555-05-55</a>            
+            <a href="tel:+78125550555">+7(812)555-05-55</a>
             <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           </div>
           <ul class="user-login">
             <li><a href="#">Вход</a></li>
-            <li><a href="#">Регистрация</a></li>            
+            <li><a href="#">Регистрация</a></li>
           </ul>
         </div>
       </div>
-      <!-- основная навигация -->
-      <nav class="main-navigation">
+      <nav class="main-navigation"> <!-- основная навигация -->
         <div class="container">
-          <ul class="site-navigation">
+          <ul class="footer-top-navigation">
             <li><a>Главная</a></li>
             <li><a href="about-us.html">Компания</a></li>
             <li><a href="catalog.html">Каталог</a></li>
