--- a/catalog.html
+++ b/catalog.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
+
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
   </head>
+
   <body>
     <header class="main-header">
       <!-- верхний блок шапки -->
@@ -11,7 +13,7 @@
         <div class="container">
           <a class="header-logo" href="index.html">Техномарт</a>
           <form class="search">
-            <input type="text" placeholder="Искать здесь:">
+            <input type="text" placeholder="Поиск:">
             <button type="submit">Найти</button> <!-- кнопку потом скрыть -->
           </form>
           <a href="#">Закладки: 0</a>
@@ -19,12 +21,11 @@
           <a href="#">Оформить заказ</a>
         </div>
       </div>
-      <!-- средний блок шапки -->
-      <div class="header-middle">
+      <div class="header-middle"><!-- средний блок шапки -->
         <div class="container">
           <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
-          <div class="header-contacts">            
-            <a href="tel:+78125550555">+7(812)555-05-55</a>            
+          <div class="header-contacts">
+            <a href="tel:+78125550555">+7(812)555-05-55</a>
             <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           </div>
           <div class="menu">
@@ -39,8 +40,7 @@
         </div>
         </div>
       </div>
-      <!-- основная навигация -->    
-      <nav class="main-navigation">
+      <nav class="main-navigation"><!-- основная навигация -->    
         <div class="container">
           <ul class="site-navigation">
             <li><a href="index.html">Главная</a></li>
@@ -260,7 +260,7 @@
     <footer class="main-footer">
       <div class="footer-top">
         <div class="container">
-          <span class="header-logo">Техномарт</span>
+          <a class="footer-logo" href="index.html">Техномарт</a>
           <ul class="footer-top-navigation">
             <li><a href="about-us.html">Компания</a></li>
             <li><a href="news.html">Новости</a></li>
