--- a/index.html
+++ b/index.html
@@ -69,44 +69,25 @@
           </ul>
         </div>
         <div class="promo-bottom-container">
-          <div class="promo-left">
-            <div class="slider">
-              <div class="slider-header">
+          <div class="promo-left"> <!-- слайдер: пока не трогать -->
+            <div class="gallery">
+              <div class="gallery-header">
                 <h3>Дрели</h3>
                 <p>Соседям на радость!</p>
               </div>
-
-              <div class="carousel slide">
-                <div class="carousel-inner">
-                  <div class="item active">
-                    <div class="banner-image">
-                      <a href="#">
-                        <img src="img/ravshan.jpg" alt="Равшан Джамшутович">
-                      </a>
-                    </div>
-                    <div class="caption">
-                      <a class="btn" href="catalog.html">Открыть каталог</a>
-                    </div>
-                  </div>
-                </div><!-- /Slide1 -->
-
-                <div class="item">
-                  <div class="banner-image">
-                    <a href="#">
-                      <img src="img/jamshut.jpg" alt="Джамшут Равшанович">
-                    </a>
-                  </div>
-                  <div class="caption">
-                    <a class="btn" href="catalog.html">Открыть каталог</a>
-                  </div>
-                </div><!-- /Slide2 -->
+              <figure class="gallery-content">
+                <a href="#">
+                  <img src="img/ravshan.jpg" width="620" height="266" alt="Равшан Джамшутович">
+                </a>
+              </figure>
+              <div class="control-box">
+                <span class="button gallery-button gallery-button-back">Назад</span>
+                <span class="button gallery-button gallery-button-next">Вперед</span>
               </div>
-
-              <div class="control-box"> <!-- под вопросом -->
-                <a data-slide="prev" href="#myCarousel" class="carousel-control left">‹</a>
-                <a data-slide="next" href="#myCarousel" class="carousel-control right">›</a>
-              </div><!-- /.control-box -->
-            </div><!-- /#slider -->
+              <div class="caption">
+                <a class="button" href="catalog.html">Открыть каталог</a>
+              </div>
+            </div>
           </div>
           <div class="promo-right">
             <div class="promo-item">
